--- a/.env
+++ b/.env
@@ -31,6 +31,9 @@ W_ESTELAR=1.0
 W_CHAIN=0.8
 W_TEMPORAL=0.8
 
+MONGO_URL=mongodb+srv://revesbot:DlBnGmlimRZpIblr@cluster0.c14fnit.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
 # Logging
 LOG_LEVEL=INFO
 """
+
